--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -10,13 +10,13 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Authoring the CVS .ignore file</H1>
 <P CLASS="Para" Label=Type>When committing resources, often there are resources 
-  that you do not want to at the version control. You can use the CVS &quot;ignore&quot; 
-  facility, which reads the contents of the file <i>.cvsignore</i> to determine 
-  what to ignore. This facility is used most often to ignore directories. </P>
-<P CLASS="Para" Label=Type>The&nbsp; <i>.</i>cvsignore file can be added to any 
-  directory of a project. Many existing CVS projects already contain several of 
-  these files. This text file consists of a list of files, directories, or patterns. 
-</P>
+  that you do not want to add to version control. One way you can do this is by 
+  using the CVS &quot;ignore&quot; facility, which reads the contents of the file 
+  <i>.cvsignore</i> to determine what to ignore. This facility is used most often 
+  to ignore directories. </P>
+<P CLASS="Para" Label=Type>The <i>.cvsignore</i> file can be added to any directory 
+  of a project. Many existing CVS projects already contain several of these files. 
+  This text file consists of a list of files, directories, or patterns. </P>
 <P> For example, to add a .cvsignore file to ignore the entire bin directory of
 an existing project: </P>
 <ol>
@@ -47,20 +47,13 @@ will be ignored.
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a><br>
-<a href="../concepts/concepts-27c.htm">Repositories</a><br>
-<a href="../concepts/concepts-27b.htm">Branches</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 </p>
 
-
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-114.htm">Releasing resources to the stream</a><br>
-<a href="tasks-100d.htm">Filtering resources from a release</a><br>
-<a href="tasks-100d1.htm">Creating a global pattern to filter resources from releasing</a><br>
-<a href="tasks-100d3.htm">Stopping resources from releasing at synchronization time</a><br>
-<a href="tasks-100d1b.htm">Overriding patterns that prevent resources from releasing</a>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
+<a href="tasks-100d1.htm">Creating a global ignore pattern</a>
 </p>
 
 <p>&nbsp;<br>
