--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Branches</H1>
 
-<p>In CVS, Teams share and integrate their ongoing work in <i>branches</i>.&nbsp;Think 
+<p>In CVS, teams share and integrate their ongoing work in <i>branches</i>.&nbsp;Think 
   of a banch as a shared work area that can be updated at any time by team members.&nbsp; 
   In this way, individuals can work on a team project, share their work with others 
   on the team, and access the work of others during all stages of the project.&nbsp; 
