--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -57,6 +57,7 @@ Committing</H1>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-113.htm">Updating</a><br>
 <a href="tasks-113b.htm">Resolving conflicts</a><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a>
 </p>
 
