*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv.htm
@@ -13,11 +13,22 @@ Advanced workbench concepts
 <BODY BGCOLOR="#ffffff">
 <H1>
 Advanced workbench concepts</H1>
-<p>The next sections cover additional workbench extensions and guidelines that
-you will likely encounter once you've implemented your plug-in and begin
-refining its function.&nbsp; At this point, we assume that you are familiar with
-the workbench API, JFace, SWT, and resources API concepts such as markers and
-natures.</p>
+<p>The next topics cover additional workbench extensions and concepts that
+you will likely encounter once you've implemented your plug-in and have begun to
+refine its function.&nbsp; </p>
+
+
+<p>In order to understand the next few topics, you should already be familiar
+with</p>
+
+
+<ul>
+  <li><a href="workbench.htm">Plugging into the Workbench</a></li>
+  <li><a href="preferences.htm">Preferences and properties</a></li>
+  <li><a href="jface.htm">JFace UI framework</a></li>
+  <li><a href="swt.htm">SWT</a></li>
+  <li><a href="resAdv.htm">Resources and workspace API</a></li>
+</ul>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
