--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
@@ -12,6 +12,42 @@ Marker help and resolution
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h2>Marker help and resolution</h2>
+<p>In <a href="resAdv_markers.htm">Resource markers</a>, we saw how plug-ins can
+define specialized marker types in order to annotate resources with
+information.&nbsp; The <a href="../samples/org.eclipse.ui.examples.readmetool/doc-html/ui_readmetool_ex.html">readme
+tool</a> example defines its own markers in order to demonstrate two
+marker-related workbench extensions:&nbsp; <b>marker help</b> and <b>marker
+resolutions</b>.&nbsp; The marker definition is in the readme plug-in's manifest
+markup:</p>
+
+
+<pre><font color="#4444CC">&lt;extension id=&quot;readmemarker&quot; point=&quot;org.eclipse.core.resources.markers&quot; name=&quot;%ReadmeMarker.name&quot;&gt;
+	&lt;super type=&quot;org.eclipse.core.resources.taskmarker&quot;/&gt;
+	&lt;super type=&quot;org.eclipse.core.resources.textmarker&quot;/&gt;
+	&lt;persistent value=&quot;true&quot;/&gt;
+	&lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.id&quot;/&gt;
+	&lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.level&quot;/&gt;
+	&lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.department&quot;/&gt;
+	&lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.code&quot;/&gt;
+	&lt;attribute name=&quot;org.eclipse.ui.examples.readmetool.language&quot;/&gt;
+&lt;/extension&gt;   </font></pre>
+
+
+<p>The tool defines a marker that inherits from the platform's text marker and
+task marker.&nbsp; It also defines named attributes that can be set and queried
+on the marker.&nbsp; Since the new readme marker is a kind of text marker, it
+inherits the text marker attributes (character location within a line number.)</p>
+
+
+<p>Markers can be added to a <b>.readme</b> file using the readme editor's popup
+menu.&nbsp; (The popup menu actions are added dynamically in <b>ReadmeTextEditor.<font SIZE="2" COLOR="#000000">editorContextMenuAboutToShow(IMenuManager</font><font SIZE="2">
+</font></b><font SIZE="2" COLOR="#000000"><b>parentMenu)</b>).&nbsp; Once added,
+the markers show in the left side of the editor and in the tasks view.</font></p>
+
+
+<p><img border="0" src="images/readmemarkermenu.jpg" width="625" height="482"></p>
+
+
 <p>&nbsp;</p>
 
 
