packages view -> package explorer view

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -14,7 +14,7 @@ Viewing compilation errors and warnings</H1>
 The workbench supports different ways to examine errors and warnings produced by a build. </P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
-Error ticks in the Packages view</LI>
+Error ticks in the Package Explorer view</LI>
 <LI CLASS="Item">
 Marker annotations in the editor</LI>
 <LI CLASS="Item">
@@ -47,7 +47,7 @@ debugging</a><br>
 <a href="../tasks/tasks-129.htm">Setting execution 
 arguments</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
+<p><a href="../reference/ref-90.htm">Package Explorer view</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
