--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -36,14 +36,14 @@ Incremental project build</h2>
 The <SPAN CLASS="Label">
 Build Project </SPAN>
 command executes an incremental build limited to one project. This option is available from the 
-pop-up menu of any project resource in the Packages view.</P>
+pop-up menu of any project resource in the Package Explorer view.</P>
 <h2>
 Full project build</h2>
 <P CLASS="Para">
 The <SPAN CLASS="Label">
 Rebuild Project</SPAN>
  command rebuilds all resources contained in a project. This option is available from the 
-pop-up menu of any project resource in the Packages view.</P>
+pop-up menu of any project resource in the Package Explorer view.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-4.htm">Java builder</a><br>
 <a href="../concepts/cbuildcp.htm">Build class path</a></p>
