--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-128.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-128.htm
@@ -17,7 +17,7 @@ Each individual Java project is associated with a launcher, which handles the de
 <ol>
   <li>
 <P CLASS="Para">
-In the Packages view, select the project. </P>
+In the Package Explorer view, select the project. </P>
   </li>
   <li>
 <P CLASS="Para">
@@ -52,7 +52,7 @@ Every time you launch a Java program in the selected project, this launcher will
 <a href="../tasks/tasks-126.htm">Running and 
 debugging</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a><br>
+<p><a href="../reference/ref-90.htm">Package Explorer view</a><br>
 <a href="../reference/ref-4.htm">Run and debug 
 actions</a> </p>
 
