--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
@@ -16,7 +16,7 @@ public static void main(String[] args)</SPAN>.</P>
 <ol>
   <li>
 <P CLASS="Para">
-In the Packages view, select the Java compilation unit or class file for which you want to set execution arguments. </P>
+In the Package Explorer view, select the Java compilation unit or class file for which you want to set execution arguments. </P>
   </li>
   <li>
 <P CLASS="Para">
@@ -62,7 +62,7 @@ the execution of a program</a><br>
 <a href="../tasks/tasks-107.htm">Viewing compilation 
 errors and warnings</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Packages view</a></p>
+<p><a href="../reference/ref-90.htm">Package Explorer view</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
