--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -17,7 +17,7 @@ folder to contain Java source code.</p>
 
 <p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
 tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the Packages view, select the project where you want the
+</span><![endif]>In the Package Explorer view, select the project where you want the
 new source folder to reside. </p>
 
 <p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
@@ -62,7 +62,7 @@ container</a><br>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
 
 <p>&nbsp;</p>
 
