--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-46.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-46.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Navigating Packages</H1>
 <P CLASS="Para">
-The Packages view that is shown by default in the Java perspective shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the Navigator. The element hierarchy is derived from the project's build paths. </P>
+The Package Explorer view that is shown by default in the Java perspective shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the Navigator. The element hierarchy is derived from the project's build paths. </P>
 <P CLASS="Para">
 For each project, its source folders and referenced libraries are shown in the tree. You can open and browse the contents of both internal and external JAR files. Opening a Java element inside a JAR opens the CLASS file editor, and if there is a source attachment for the JAR file, its corresponding source is shown.</P>
 <DIV CLASS="XRefList">
