--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-50.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-50.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Reorganizing a Project Using Drag-and-Drop</H1>
 <P CLASS="Para">
-In the Packages view, you can use drag-and-drop to reorganize your projects.</P>
+In the Package Explorer view, you can use drag-and-drop to reorganize your projects.</P>
 <P>&nbsp;<br>
 
 <img src = ../ngibmcpy.gif width="195" height="12">
