--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -51,7 +51,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
 <a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
 <a href="..\tasks\tasks-61.htm">Setting the order of import statements</a><br>
 <a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
-Packages view</a></p>
+Package Explorer view</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
