--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -51,7 +51,7 @@ history edition</a><br>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Packages view</a><br>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a><br>
 &nbsp;</p>
 
 <p>&nbsp;<br>
