--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-71.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-71.htm
@@ -62,7 +62,7 @@ from the menu bar<b>.</b></li>
 <br><a href="..\tasks\tasks-69.htm">Viewing documentation and information</a>
 <br><a href="..\tasks\tasks-70.htm">Viewing marker help</a>
 <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1028" height=27 width=159>
-<p><a href="..\reference\ref-90.htm">Packages view</a>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a>
 <br>&nbsp;
 <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1029" height=12 width=195></div>
 
