--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -3,7 +3,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Opening a type in the Packages view</title>
+<title>Opening a type in the Package Explorer view</title>
 </head>
 
 <body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
@@ -50,12 +50,12 @@ alt="Related concepts" border=0></p>
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
 <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
-Packages view</a></p>
+Package Explorer view</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
 
 <p>&nbsp;<br>
 <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
