--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -15,7 +15,7 @@ Renaming a package</h1>
 <div CLASS="Para">To rename a package:</div>
 
 <ol>
-<div CLASS="Para">In the Package Explorer or Packages view, select the
+<div CLASS="Para">In the Package Explorer or Package Explorer view, select the
 package that you want to rename.</div>
 
 <div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
@@ -33,7 +33,7 @@ package..</div>
 <br><a href="tasks-15.htm">Creating a new Java package</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 
-<p CLASS="Para"><a href="../reference/ref-90.htm">Packages view</a>
+<p CLASS="Para"><a href="../reference/ref-90.htm">Package Explorer view</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
