--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -59,7 +59,7 @@ From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
 unit</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-90.htm">Packages view</a>
+<p><a href="../reference/ref-90.htm">Package Explorer view</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
