--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -44,7 +44,7 @@ src="..\images\ngrelt.gif" alt="Related tasks" border=0></p>
 <p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p class=para><a href="..\reference\ref-90.htm">Packages view</a></p>
+<p class=para><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
 
 <p>&nbsp;<br>
 <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
