--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -3,7 +3,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Showing a type's compilation unit in the Packages view</title>
+<title>Showing a type's compilation unit in the Package Explorer view</title>
 </head>
 
 <body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
@@ -42,13 +42,13 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
 <p><a href="..\tasks\tasks-129.htm">Setting execution arguments</a><br>
 <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
-<a href="..\tasks\tasks-75.htm">Opening a type in the Packages view</a><br>
+<a href="..\tasks\tasks-75.htm">Opening a type in the Package Explorer view</a><br>
 <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
 
 <p>&nbsp;<br>
 <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
