--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
@@ -40,7 +40,7 @@ alt="Related concepts" border=0></p>
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
 <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
-Packages view</a><br>
+Package Explorer view</a><br>
 <a href="..\tasks\tasks-90.htm">Renaming a package</a><br>
 <a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
 <a href="..\tasks\tasks-15.htm">Creating a new Java package</a></p>
@@ -48,7 +48,7 @@ Packages view</a><br>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Packages view</a></p>
+<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
 
 <p>&nbsp;<br>
 <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
