--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -165,7 +165,7 @@
 
         <p class="Para">
           The compilation unit is compiled automatically and
-          errors show up in the Packages view, in the Tasks view and on the
+          errors show up in the Package Explorer, in the Tasks view and on the
           vertical ruler. Notice that in the Package Explorer,
           the errors are propagated up to the project of the
           compilation unit containing the error.
