packages view -> package explorer view

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -46,16 +46,6 @@ class hierarchy:</p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:Arial;color:black'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
-<h2>Junit view</h2>
-
-<h2>Projects view</h2>
-
-<h2>Packages view</h2>
-
-<h2>Types view</h2>
-
-<h2>Members view<span style='font-size:10.0pt;font-family:Arial;color:black'><o:p></o:p></span></h2>
-
 <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
 
@@ -78,7 +68,7 @@ src="..\images\ngrelr.gif" alt="Related reference"></p>
 <a href="..\reference\ref-52.htm">Display view</a><br>
 <a href="..\reference\ref-56.htm">Expressions view</a><br>
 <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-<a href="..\reference\ref-90.htm">Packages view</a><br>
+<a href="..\reference\ref-90.htm">Package Explorer view</a><br>
 <a href="..\reference\ref-66.htm">Processes view</a><br>
 <a href="..\reference\ref-74.htm">Variables view</a><br>
 <a href="..\reference\ref-24.htm">Views and editors</a><br>
