--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -100,7 +100,7 @@ src="..\images\ngrelr.gif" alt="Related reference"></p>
 <a href="..\reference\ref-52.htm">Display view</a><br>
 <a href="..\reference\ref-56.htm">Expressions view</a><br>
 <a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-<a href="..\reference\ref-90.htm">Packages view</a><br>
+<a href="..\reference\ref-90.htm">Package Explorer view</a><br>
 <a href="..\reference\ref-66.htm">Processes view</a><br>
 <a href="..\reference\ref-74.htm">Variables view</a></p>
 
