task 86 - moving a compilation unit is obsolete

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -30,7 +30,7 @@ to it.</div>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-9.htm">Refactoring support</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
-<p><a href="tasks-86.htm">Moving a compilation unit</a>
+<p><a href="tasks-85.htm">Copying and moving Java elements</a>
 <br><a href="tasks-107.htm">Viewing compilation errors and warnings</a>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
 unit</a>
