--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -26,8 +26,7 @@ refactoring operation</a><br>
 <a href="../tasks/tasks-90.htm">Renaming a package</a><br>
 <a href="../tasks/tasks-92.htm">Renaming a 
 compilation unit</a><br>
-<a href="../tasks/tasks-86.htm">Moving a compilation 
-unit</a><br>
+<a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
 <a href="../tasks/tasks-94.htm">Renaming a class, 
 field, or interface</a><br>
 <a href="../tasks/tasks-96.htm">Renaming a method</a><br>
