--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -99,7 +99,7 @@ to have <b>Ctrl</b> pressed while dragging to copy the elements.
 <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
 <p><a href="..\tasks\tasks-11.htm">Creating Java elements</a>
 <br><a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a>
-<br><a href="tasks-86.htm">Moving a compilation unit</a>
+<br><a href="tasks-85.htm">Copying and moving Java elements</a>
 <br>&nbsp;
 <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
 
